--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,16 @@
         <dependency>
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
-			<version>2.1.2.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-security-test-4.2.2.RELEASE.jar</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
